[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["thimjo <thimjo.koca@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
docplex = "^2.28.240"
cplex = "^22.1.2.0"
ortools = "^9.14.6206"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

